changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ tests/output/*
 !.gitkeep
 
 .Python
-build/
+#build/
 develop-eggs/
 dist/
 downloads/
@@ -74,7 +74,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+# docs/_build/
 
 # PyBuilder
 target/
