--- a/HPWHSizer.yml
+++ b/HPWHSizer.yml
@@ -5,6 +5,4 @@ dependencies:
   - spyder=4.1.2
   - pip
   - pip:
-    - numpy==1.18.3
-    - plotly==4.0.0
-    - plotly_express==0.4.0
+    - -r file:requirements.txt
