--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,11 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        pip install -r requirements.txt
         
-        conda update conda
-        conda env create --file HPWHSizer.yml
-        conda env list
-        conda activate HPWHSizer
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
